<resources>
    <string name="app_name">Shopping</string>

    <string name="back">back</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="cart">Cart</string>
    <string name="home">Home</string>
    <string name="category">Categories</string>
    <string name="pay">pay</string>
    <string name="accept_the_payment">Accept the Payment</string>
    <string name="card_expiry_date">Card Expiry Date</string>
    <string name="card_number">CardNumber</string>
    <string name="cvv">CVV</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="total_price_is">Total price is:</string>
</resources>